force-app/main/default/objects/Contact/fields/Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Address_Text__c</fullName>
    <formula>IF(NOT(ISBLANK(MailingStreet)), MailingStreet + &apos;, &apos; , NULL) + IF(NOT(ISBLANK(MailingCity)), MailingCity + &apos;, &apos;, NULL) + IF(NOT(ISBLANK(MailingState)), MailingState + &apos;, &apos;, NULL) + IF(NOT(ISBLANK( MailingPostalCode )), MailingPostalCode, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Text</label>
    <type>Text</type>
</CustomField>