force-app/main/default/objects/Contact/fields/Contact_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferences__c</fullName>
    <label>Contact Preferences</label>
    <type>TextArea</type>
</CustomField>