force-app/main/default/objects/Contact/fields/Patient_Card_Config_Override__c.field-meta.xml
<CustomField>
    <fullName>Patient_Card_Config_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Card Config Override</label>
    <type>Checkbox</type>
</CustomField>