force-app/main/default/objects/Contact/recordTypes/HealthCloudGA__IndustriesBusiness.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__IndustriesBusiness</fullName>
    <active>true</active>
    <description>Represents a Business</description>
    <label>Business</label>
</RecordType>